test/expressions/diten/uintDecimalOverflow.good
uintDecimalOverflow.chpl:1: syntax error: integer literal overflow: '18446744073709551616' is too big for a 64-bit unsigned integer
